[master]
    - No longer write JabRef version to BibTex file header.
    - No longer add blank lines inside a bibtex entry
    - Perform syntax improvements enabled by Java 1.7+ (diamond operator, try-with-resources)
    - List of authors is now auto generated `scripts/generate-authors.sh` and inserted into L10N About.html
    - Remove Mr.DLib support as MR.DLib will be shut down in 2015
    - Streamline logging API: Replace usages of java.util.logging with commons.logging
    - BREAKING: Remove plugin functionality.
    - Fixes Bug#1297: No console message on closing.
[dev_2.11]
    - Backport from 2.80: Fixes Bug#1297: No console message on closing.
    - Fix for bugs #1221 and #1261 (also partly #1243): order of fields in customized entry types no longer gets destroyed by the entry editor 
    - "ISBN to BibTeX" fetcher now uses eBook.de's API (fixes bug #1241)
    - BREAKING: Search groups now use same search logic as UI --> avoids confusion when converting a UI search into a search group. Behaviour before: contains/regex check of whole search string; behaviour after: contains/regex check of every word of the search string. The new search is more powerful and con simulate the old behaviour: enclose everything in double quotes, e.g., process language --> "process language".
    - Fix for bug #1276: OO styles do not consider editor fields anymore for sorting
    - Fix for bug #1288: Emacs keybindings: Rebinding of C-f can now be configured
    - Special fields: .bib files edited with 2.11 beta 3 are not compatible with this release. Other versions are not affected.
    - JabRef metadata ("jabref-meta") @comments are now always written in alphabetical order
    - Changed HTML description of search expressions, expressing the conditional logic more explicitly with brackets.
    - Fixed INSPIRE searches compatibility problem (by Stefano Gariazzo).
    - Change default of "use IEEE abbreviations" from TRUE to FALSE